# Autonomous-Prior-Auth-System

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  MODEL_COMPARISON.md  Makefile  PortfolioReadme.md  README.md  UpdatedPAGuidelines.txt  agent_logic.py  audit_llm_output.py  audit_log.jsonl  audit_logger.py  bandit_report.json  bandit_report_new.json  batch_runner.py  bce_reranker.py  benchmark.py  bug_data.json  bug_data_2025-12-20.json  bug_data_2025-12-23.json  bug_report.md  bug_report_2025-12-20.md  bug_report_2025-12-23.md  chaos_monkey.py  check_results.py  config.py  context_rules.py  data_conditions.csv  data_observations.csv  data_patients.csv  debug_check.py  diagnosisMap.csv  edit_server.py  eslint_report.txt  etl_pipeline.py  governance_audit.py  offline_mode.py  policy_constants.py  (+17 more)
.agent/rules/: env-mandate.md  env.md
.agent/workflows/: comprehensive-repository-analysis.md  (+3 more)
dashboard/: .gitignore  README.md  agent_logic.py  npm_audit_report.json  package-lock.json  package.json
models/: build_models.sh
policies/: RX-WEG-2025.json
rules/: coding_integrity_rules.py
schemas/: dashboard_data.schema.json  governance_report.schema.json  policy_snapshot.schema.json
scripts/: freeze_dependencies.sh  ollama_nothink_run.sh
tests/: reproduce_bug_002.py  test_adversarial.py  test_agent_logic_safety.py  test_audit_bug.py  test_audit_fix.py  test_batch_runner_paths.py  test_clinical_logic.py  test_coding_integrity_rules.py  test_config_constants.py  test_context_rules.py  test_gold_regression.py  test_guardrails.py  test_json_extraction.py  test_policy_cdi.py  test_policy_engine_structured.py  test_policy_integration.py  test_policy_safety_signal.py  test_policy_snapshot.py  test_policy_utils.py  test_rag_rerank_sanity.py  test_rag_sections.py  test_repo_audit.py  test_schema_validation.py  verify_code_enforcement.py
tools/: repo_audit.py
(+944 files in other folders)
